--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://i.imgur.com/H1qsYEl.png"/>
+    <img
+      src="https://i.imgur.com/H1qsYEl.png"
+      alt="i can fly"
+    />
+    <img
+      src="https://i.imgur.com/H1qsYEl.png"
+      alt="meow meow"
+      title="Cat Snack"
+    />
   </body>
 </html>
